# bip-certo-pack

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppLayout.tsx  AppSidebar.tsx  RequireAccess.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/scanner/: ManualMode.tsx  MobileScanner.tsx  NotFoundDialog.tsx  ReaderMode.tsx  ScanHistory.tsx  StatusIndicator.tsx
src/contexts/: AppContext.tsx  AuthContext.tsx
src/hooks/: useSmartLookup.ts
src/lib/: cache.ts  config.ts  realtime.ts  supabase.ts
src/lib/csv/: aliexpress.ts  (+6 more)
src/pages/: Auth.tsx  Find.tsx  Health.tsx  Imports.tsx  Index.tsx  Landing.tsx  Login.tsx  Orders.tsx  PackageDetail.tsx  PackageDetails.tsx  Packages.tsx  Products.tsx  Scanner.tsx  Settings.tsx  SettingsPage.tsx
supabase/: config.toml
supabase/migrations/: 001_schema.sql  20260225033216_a321ec44-15f8-48fa-acda-fe55d555c93d.sql  20260226045147_145d5fc2-f713-4e39-8644-a3be717c70ca.sql  20260226045428_091886bd-53e2-4b31-b1bb-606d38d7872f.sql  20260226182433_import_jobs_schema.sql  20260226182434_increment_processed_rows_rpc.sql  20260227031753_71e27f0e-f3df-432e-8451-519519e9a431.sql  20260227031806_3e76b3bc-37d6-4eef-97c9-6aa936b55640.sql  20260227031946_6428031e-3d5c-47a3-b377-bd3f3e76aaf4.sql  20260228043614_f5c68aa1-a7f2-40e5-9d24-30b14dc066b2.sql  20260228044623_daf04ee1-88d0-4d84-ad68-b49a9d1574e3.sql  20260302033444_6e8dfa02-ad4c-4178-9521-a1e85a686cb8.sql
(+3 files in other folders)
